--- a/libs/a11yc/resources/en/guidelines.yml
+++ b/libs/a11yc/resources/en/guidelines.yml
@@ -3,7 +3,7 @@ guidelines:
     code: 1-1
     name: Text Alternatives
     principle: *p1
-    url: http://www.w3.org/TR/UNDERSTANDING-WCAG20/text-equiv.html
+    url: https://www.w3.org/TR/UNDERSTANDING-WCAG20/text-equiv.html
     summary: |
       Provide text alternatives for any non-text content so that it can be changed into other forms people need, such as large print, braille, speech, symbols or simpler language.
 
@@ -11,7 +11,7 @@ guidelines:
     code: 1-2
     name: Time-based Media
     principle: *p1
-    url: http://www.w3.org/TR/UNDERSTANDING-WCAG20/media-equiv.html
+    url: https://www.w3.org/TR/UNDERSTANDING-WCAG20/media-equiv.html
     summary: |
       Provide alternatives for time-based media.
 
