--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -96,6 +96,6 @@ exclude_paths:
 - public/assets/css/font-awesome/
 - public/assets/js/jquery-1.11.1.min.js
 - libs/kontiki/classes/Session.php
-- libs/a11yc/resources/ietf_langs.php
-- libs/a11yc/languages
+- resources/ietf_langs.php
+- languages
 - views/
